--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "description": "An example of getting started with the AS4 alpha",
   "main": "dist/index.js",
-  "type": "module",
   "scripts": {
-    "postinstall": "npm run compile",
-    "compile": "tsc",
-    "start": "npm run compile && node ./dist/index.js"
+    "start:dev": "nodemon",
+    "start": "yarn compile && node dist/index.js",
+    "compile": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +17,7 @@
     "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "@types/node": "^18.11.18"
+    "@types/node": "^18.11.18",
+    "nodemon": "^2.0.20"
   }
 }
