--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@apollo/datasource-rest": "^4.3.2",
     "@apollo/server": "^4.3.0",
     "graphql": "^16.6.0",
+    "lodash": "^4.17.21",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.18",
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.20"
   }
 }
